--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,8 @@ pandas
 numpy
 streamlit
 sklearn
+sklearn.pipeline.Pipeline
+sklearn.compose.ColumnTransformer
+sklearn.preprocessing.OneHotEncoder 
+sklearn.preprocessing.MinMaxScaler
+sklearn.impute.SimpleImputer
